新增项目node文件夹

--- a/technology/Nodejs/project/node-files/views/404.ejs
+++ b/technology/Nodejs/project/node-files/views/404.ejs
@@ -34,6 +34,7 @@
               </li>
             </ul>
             -->
+            <img src="../public/404.jpeg" alt="">
             
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
