--- a/technology/Nodejs/project/node-files/views/add-dir.ejs
+++ b/technology/Nodejs/project/node-files/views/add-dir.ejs
@@ -23,9 +23,22 @@
             <a class="navbar-brand" href="#">小小相册</a>
           </div>
         </div>
+        <!-- <ol class="breadcrumb">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Library</a></li>
+          <li class="active">Data</li>
+        </ol> -->
       </nav>
 
-      
+      <div class="container">
+        <form action="/home/addDir" method="post">
+          <div class="form-group">
+            <label for="exampleInputEmail1">文件夹名称</label>
+            <input type="input" class="form-control" name="dirName" id="exampleInputEmail1" placeholder="文件夹名称">
+          </div>
+          <button type="submit" class="btn btn-default">提交</button>
+        </form>
+      </div>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
